--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+#parent
+{
+    overflow: hidden;
+}
+
 .draggable{
-    /* box-sizing:border-box;
-    transform: translate(0px, 0px)!important; */
     background-size: 100% 100% !important;
+    box-sizing:border-box;
 }
